--- a/css/master.css
+++ b/css/master.css
@@ -5,8 +5,11 @@ body {
 }
 
 nav {
+  overflow: hidden;
+  position: absolute;
   width: 100%;
   text-align: center;
+  background: rgba(255, 255, 255, 0.7);
 }
 
 a {
@@ -24,6 +27,45 @@ h1 {
   width: 100%;
   font-size: 6vw;
   color: grey;
+}
+
+h1 span {
+  position: relative;
+  /* top: 20px; */
+  display: inline-block;
+  -webkit-animation: bounce .3s ease;
+          animation: bounce .3s ease;
+  /* font-family: 'Titan One', cursive; */
+  /* font-size: 80px;
+  line-height:110px;
+  color: #FFF; */
+}
+
+h1 span:nth-child(2) { -webkit-animation-delay: .3s; animation-delay: .3s; }
+h1 span:nth-child(3) { -webkit-animation-delay: .3s; animation-delay: .3s; }
+h1 span:nth-child(4) { -webkit-animation-delay: .3s; animation-delay: .3s; }
+h1 span:nth-child(5) { -webkit-animation-delay: .3s; animation-delay: .3s; }
+h1 span:nth-child(6) { -webkit-animation-delay: .3s; animation-delay: .3s; }
+h1 span:nth-child(7) { -webkit-animation-delay: .3s; animation-delay: .3s; }
+h1 span:nth-child(8) { -webkit-animation-delay: .3s; animation-delay: .3s; }
+h1 span:nth-child(9) { -webkit-animation-delay: .3s; animation-delay: .3s; }
+h1 span:nth-child(10) { -webkit-animation-delay: .3s; animation-delay: .3s; }
+h1 span:nth-child(11) { -webkit-animation-delay: 3s; animation-delay: 3s; }
+h1 span:nth-child(12) { -webkit-animation-delay: 3s; animation-delay: 3s; }
+h1 span:nth-child(13) { -webkit-animation-delay: 3s; animation-delay: 3s; }
+h1 span:nth-child(14) { -webkit-animation-delay: 3s; animation-delay: 3s; }
+/* h1 span:nth-child(15) { -webkit-animation-delay: 3s; animation-delay: 3s; } */
+
+@-webkit-keyframes bounce {
+  100% {
+    top: -20px;
+  }
+}
+
+@keyframes bounce {
+  100% {
+    top: -20px;
+  }
 }
 
 h2 {
@@ -63,11 +105,22 @@ li {
   display: flex;
 }
 
+.page-scroll .fa {
+  display: inline-block;
+  overflow: hidden;
+  position: absolute;
+  bottom: 0.2em;
+  margin: 0;
+  padding: 0;
+  border: 0;
+}
+
+
 #column0 {
   flex: 1;
 }
 
-#section-0 {
+#Home {
   display: flex;
   flex-direction: column;
   height: 100vh;
@@ -85,8 +138,8 @@ li {
 
 .section-intro-content {
   display: flex;
-  height: 60vh;
-  width: 100vh;
+  height: 70vh;
+  width: 120vh;
   background-color: white;
   margin: auto;
   box-shadow: 10px 10px 8px #888888;
@@ -97,7 +150,7 @@ li {
   text-align: center;
 }
 
-#section-1 {
+#About {
   display: flex;
   flex-direction: column;
   height: 100vh;
@@ -116,13 +169,13 @@ li {
 #columnA {
   flex: 3;
   text-align: center;
-  padding: 1.5em;
+  padding: 0em 1.5em 1.5em 1.5em;
 }
 
 #columnS {
   flex: 1;
   text-align: left;
-  padding: 1.5em;
+  padding: 0em 1.5em 1.5em 1.5em;
 }
 
 .content {
@@ -130,7 +183,7 @@ li {
   width: 100%;
 }
 
-#section-2 {
+#Projects {
   display: flex;
   flex-direction: column;
   height: 100vh;
@@ -146,7 +199,24 @@ li {
    background-size: 15px 30px;
 }
 
-#section-3 {
+.container-slide {
+  display: flex;
+  width: 100%;
+}
+
+#left-slide {
+  flex: 1;
+  text-align: center;
+  /* padding: 0em 1.5em 1.5em 1.5em; */
+}
+
+#right-slide {
+  flex: 2;
+  text-align: center;
+  /* padding: 0em 1.5em 1.5em 1.5em; */
+}
+
+#Contact {
   display: flex;
   flex-direction: column;
   height: 100vh;
@@ -169,7 +239,7 @@ li {
 }
 
 .button {
-   width:170px;
+   width:200px;
    height:70px;
    box-shadow:inset 0 1px 0 0 #fff;
    background:-webkit-gradient( linear, left top, left bottom, color-stop(0.05, #ffffff), color-stop(1, #d1d1d1) );
@@ -198,4 +268,104 @@ li {
 .button:active {
    position:relative;
    top:1px
+}
+
+* {box-sizing:border-box}
+
+/* Slideshow container */
+.slideshow-container {
+  max-width: 300px;
+  position: relative;
+  margin: auto;
+}
+
+/* Hide the images by default */
+.mySlides {
+    display: none;
+}
+
+/* Next & previous buttons */
+.prev, .next {
+  cursor: pointer;
+  position: absolute;
+  top: 50%;
+  width: auto;
+  margin-top: -22px;
+  padding: 16px;
+  color: grey;
+  font-weight: bold;
+  font-size: 18px;
+  transition: 0.6s ease;
+  border-radius: 0 3px 3px 0;
+}
+
+.prev {
+  left: 0;
+  border-radius: 3px 0 0 3px;
+}
+
+/* Position the "next button" to the right */
+.next {
+  right: 0;
+  border-radius: 3px 0 0 3px;
+}
+
+/* On hover, add a black background color with a little bit see-through */
+.prev:hover, .next:hover {
+  background-color: rgba(255,255,255,0.8);
+}
+
+/* Caption text */
+.text {
+  color: grey;
+  font-size: 15px;
+  padding: 8px 12px;
+  position: absolute;
+  bottom: 8px;
+  width: 100%;
+  text-align: center;
+  background-color: rgba(255,255,255,0.8);
+}
+
+/* Number text (1/3 etc) */
+.numbertext {
+  color: #f2f2f2;
+  font-size: 12px;
+  padding: 8px 12px;
+  position: absolute;
+  top: 0;
+}
+
+/* The dots/bullets/indicators */
+.dot {
+  cursor: pointer;
+  height: 15px;
+  width: 15px;
+  margin: 0 2px;
+  background-color: #bbb;
+  border-radius: 50%;
+  display: inline-block;
+  transition: background-color 0.6s ease;
+}
+
+.active, .dot:hover {
+  background-color: #717171;
+}
+
+/* Fading animation */
+.fade {
+  -webkit-animation-name: fade;
+  -webkit-animation-duration: 1.5s3
+  animation-name: fade;
+  animation-duration: 1.5s;
+}
+
+@-webkit-keyframes fade {
+  from {opacity: .4}
+  to {opacity: 1}
+}
+
+@keyframes fade {
+  from {opacity: .4}
+  to {opacity: 1}
 }
