--- a/css/master.css
+++ b/css/master.css
@@ -25,23 +25,24 @@ a {
 h1 {
   text-align: center;
   width: 100%;
-  font-size: 6vw;
+  font-size: 5em;
   color: grey;
+  padding-top: 0;
 }
 
-h1 span {
-  position: relative;
+/* h1 span {
+  position: relative; */
   /* top: 20px; */
-  display: inline-block;
+  /* display: inline-block;
   -webkit-animation: bounce .3s ease;
-          animation: bounce .3s ease;
+          animation: bounce .3s ease; */
   /* font-family: 'Titan One', cursive; */
   /* font-size: 80px;
   line-height:110px;
   color: #FFF; */
-}
+/* } */
 
-h1 span:nth-child(2) { -webkit-animation-delay: .3s; animation-delay: .3s; }
+/* h1 span:nth-child(2) { -webkit-animation-delay: .3s; animation-delay: .3s; }
 h1 span:nth-child(3) { -webkit-animation-delay: .3s; animation-delay: .3s; }
 h1 span:nth-child(4) { -webkit-animation-delay: .3s; animation-delay: .3s; }
 h1 span:nth-child(5) { -webkit-animation-delay: .3s; animation-delay: .3s; }
@@ -53,10 +54,10 @@ h1 span:nth-child(10) { -webkit-animation-delay: .3s; animation-delay: .3s; }
 h1 span:nth-child(11) { -webkit-animation-delay: 3s; animation-delay: 3s; }
 h1 span:nth-child(12) { -webkit-animation-delay: 3s; animation-delay: 3s; }
 h1 span:nth-child(13) { -webkit-animation-delay: 3s; animation-delay: 3s; }
-h1 span:nth-child(14) { -webkit-animation-delay: 3s; animation-delay: 3s; }
+h1 span:nth-child(14) { -webkit-animation-delay: 3s; animation-delay: 3s; } */
 /* h1 span:nth-child(15) { -webkit-animation-delay: 3s; animation-delay: 3s; } */
 
-@-webkit-keyframes bounce {
+/* @-webkit-keyframes bounce {
   100% {
     top: -20px;
   }
@@ -66,43 +67,46 @@ h1 span:nth-child(14) { -webkit-animation-delay: 3s; animation-delay: 3s; }
   100% {
     top: -20px;
   }
-}
+} */
+
 
 h2 {
   text-align: center;
   width: 100%;
-  font-size: 4.5vw;
+  font-size: 2em;
   color: grey;
+  padding: 0 2em 0 2em;
 }
 
 h3 {
   text-align: center;
   width: 100%;
-  font-size: 2.5vw;
+  font-size: 2.5em;
   color: rgba(154,186,206,0.7);
 }
 
 u {
   text-align: center;
   width: 100%;
-  font-size: 3.5vw;
+  font-size: 3.5em;
   color: rgba(154,186,206,0.7);
 }
 
 p {
   text-align: center;
-  font-size: 1.5vw;
+  font-size: 1.5em;
   color: rgba(154,186,206,0.7);
 }
 
 li {
   text-align: left;
-  font-size: 1.5vw;
+  font-size: 1.5em;
   color: rgba(154,186,206,0.7);
 }
 
 .container0 {
   display: flex;
+  width; 100%;
 }
 
 .page-scroll .fa {
@@ -119,6 +123,7 @@ li {
 #column0 {
   flex: 1;
 }
+
 
 #Home {
   display: flex;
@@ -148,6 +153,14 @@ li {
 .intro-content {
   width: 100%;
   text-align: center;
+}
+
+.container1 {
+  display: flex;
+}
+
+#column1 {
+  flex: 1;
 }
 
 #About {
@@ -183,6 +196,14 @@ li {
   width: 100%;
 }
 
+.container2 {
+  display: flex;
+}
+
+#column2 {
+  flex: 1;
+}
+
 #Projects {
   display: flex;
   flex-direction: column;
@@ -214,6 +235,14 @@ li {
   flex: 2;
   text-align: center;
   /* padding: 0em 1.5em 1.5em 1.5em; */
+}
+
+.container3 {
+  display: flex;
+}
+
+#column3 {
+  flex: 1;
 }
 
 #Contact {
@@ -325,6 +354,7 @@ li {
   width: 100%;
   text-align: center;
   background-color: rgba(255,255,255,0.8);
+  margin: 0 0 1.2em 0;
 }
 
 /* Number text (1/3 etc) */
